--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
         body {
-            background: url('p5_背景2.jpg') no-repeat center center fixed;
+            background: url('personal_profile/p5_背景2.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white;
             font-family: 'Arial', sans-serif;
@@ -65,9 +65,9 @@
 <body>
     <div class="welcome">WELCOME TO MY PROFILE!</div>
     <div class="menu">
-        <a class="option" href="about_me.html">ABOUT ME</a>
-        <a class="option" href="hobbies.html">HOBBIES</a>
-        <a class="option" href="contact.html">CONTACT</a>
+        <a class="option" href="personal_profile/about_me.html">ABOUT ME</a>
+        <a class="option" href="personal_profile/hobbies.html">HOBBIES</a>
+        <a class="option" href="personal_profile/contact.html">CONTACT</a>
     </div>
 </body>
 </html>
