--- a/personal_profile/about_me.html
+++ b/personal_profile/about_me.html
@@ -67,7 +67,7 @@
            I am a 21-year-old male, currently in my second year (final term) of Computer Science.  
            I am an international student from China.
         </p>
-        <a class="back" href="main_page.html">Back to Main Page</a>
+        <a class="back" href="index.html">Back to Main Page</a>
     </div>
 </body>
 </html>
