--- a/personal_profile/about_me.html
+++ b/personal_profile/about_me.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css"> <!-- Ensure correct path -->
     <style>
         body {
-            background: url('p5_趴着.jpg') no-repeat center center fixed;
+            background: url('../personal_profile/p5_趴着.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white;
             font-family: 'Arial', sans-serif;
@@ -67,7 +67,7 @@
            I am a 21-year-old male, currently in my second year (final term) of Computer Science.  
            I am an international student from China.
         </p>
-        <a class="back" href="index.html">Back to Main Page</a>
+        <a class="back" href="../index.html">Back to Main Page</a> <!-- Corrected link -->
     </div>
 </body>
 </html>
