--- a/personal_profile/contact.html
+++ b/personal_profile/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css"> <!-- Ensure correct path -->
     <style>
         body {
             background: url('p5_开枪.jpg') no-repeat center center fixed;
@@ -69,7 +69,7 @@
         <p>If you want to play games together, here is my Steam code:  
             <strong>1108956620</strong>
         </p>
-        <a class="back" href="main_page.html">Back to Main Page</a>
+        <a class="back" href="../index.html">Back to Main Page</a> <!-- Fixed link -->
     </div>
 </body>
 </html>
