--- a/personal_profile/hobbies.html
+++ b/personal_profile/hobbies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hobbies</title> 
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="../styles.css"> <!-- Fixed path to styles.css -->
     <style>
         body {
             background: url('p5_玩手机.jpg') no-repeat center center fixed;
@@ -67,7 +67,7 @@
            I also enjoy Souls-like games.  
            Additionally, I am interested in game development, although I haven't created any games yet.
         </p>
-        <a class="back" href="main_page.html">Back to Main Page</a>
+        <a class="back" href="../index.html">Back to Main Page</a> <!-- Fixed link -->
     </div>
 </body>
 </html>
