--- a/personal_profile/about_me.html
+++ b/personal_profile/about_me.html
@@ -63,11 +63,17 @@
 <body>
     <div class="content-box">
         <h1>About Me</h1>
-        <p>My name is Haoxuan Li, but you can call me Darren.  
-           I am a 21-year-old male, currently in my second year (final term) of Computer Science.  
-           I am an international student from China.
-        </p>
+        <p>
+  Hi! My name is Haoxuan Li, but you can call me Darren.  
+  I am a 21-year-old Computer Science student in my third year of study (part-time), and I am expected to graduate next year in Term 3.  
+
+  I was born in China and moved to Australia at the age of 13.  
+  Since then, I’ve been passionate about technology and problem-solving.  
+
+  While I’m just starting to build my first project, I am eager to learn, collaborate, and create meaningful solutions through coding and innovation.  
+</p>
         <a class="back" href="../index.html">Back to Main Page</a> <!-- Corrected link -->
     </div>
 </body>
 </html>
+
