--- a/personal_profile/hobbies.html
+++ b/personal_profile/hobbies.html
@@ -66,8 +66,10 @@
         <p>As you can see, I love Persona 5 and other JRPGs.  
            I also enjoy Souls-like games.  
            Additionally, I am interested in game development, although I haven't created any games yet.
+        i also enjoy cosplay the characters that i like here is some pictures that i have 
         </p>
         <a class="back" href="../index.html">Back to Main Page</a> <!-- Fixed link -->
     </div>
 </body>
 </html>
+
