--- a/personal_profile/hobbies.html
+++ b/personal_profile/hobbies.html
@@ -11,44 +11,70 @@
             background-size: cover;
             color: white;
             font-family: 'Arial', sans-serif;
-            text-align: center;
             padding: 50px;
         }
 
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 40px;
+        }
+
+        /* 左边照片区 */
+        .gallery {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .gallery img {
+            width: 260px;   /* 控制图片宽度 */
+            height: auto;
+            border-radius: 12px;
+            border: 3px solid white;
+            box-shadow: 4px 4px 12px rgba(0,0,0,0.6);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .gallery img:hover {
+            transform: scale(1.05);
+        }
+
+        /* 右边文字介绍 */
         .content-box {
             background: rgba(0, 0, 0, 0.7);
-            display: inline-block;
             padding: 25px;
             border-radius: 15px;
             border: 3px solid white;
             box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-            max-width: 800px;
+            max-width: 600px;
         }
 
         h1 {
             font-size: 48px;
             margin-bottom: 15px;
             text-shadow: 3px 3px 0px black;
+            text-align: center;
         }
 
         p {
             font-size: 22px;
-            line-height: 1.5;
+            line-height: 1.6;
             margin-bottom: 20px;
-            color: white;
-            text-shadow: 2px 2px 0px black;
+            text-align: justify;
         }
 
         .back {
             display: inline-block;
             text-decoration: none;
-            font-size: 26px;
+            font-size: 24px;
             font-weight: bold;
             background: white;
             color: black;
-            padding: 15px 30px;
+            padding: 12px 25px;
             border-radius: 10px;
-            border: 5px solid black;
+            border: 3px solid black;
             margin-top: 20px;
             transition: 0.3s ease-in-out;
         }
@@ -59,100 +85,35 @@
             text-shadow: 2px 2px 0px white;
         }
 
-        /* 图片展示区 */
-        .gallery {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
-            margin-top: 20px;
-        }
-
-        .gallery img {
-            width: 250px;
-            height: auto;
-            border-radius: 12px;
-            border: 3px solid white;
-            box-shadow: 4px 4px 12px rgba(0,0,0,0.6);
-            cursor: pointer;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .gallery img:hover {
-            transform: scale(1.1);
-        }
-
-        /* Lightbox 样式 */
-        .lightbox {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            top: 0; left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.9);
-            justify-content: center;
-            align-items: center;
-        }
-
-        .lightbox img {
-            max-width: 90%;
-            max-height: 80%;
-            border: 5px solid white;
-            border-radius: 12px;
-        }
-
-        .lightbox:target {
-            display: flex;
-        }
-
-        .close {
-            position: absolute;
-            top: 20px;
-            right: 40px;
-            font-size: 40px;
-            font-weight: bold;
-            color: white;
-            text-decoration: none;
-        }
-
-        .close:hover {
-            color: red;
+        /* 让小屏幕自动上下布局 */
+        @media (max-width: 900px) {
+            .container {
+                flex-direction: column;
+                align-items: center;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="content-box">
-        <h1>Hobbies</h1>
-        <p>
-           As you can see, I love Persona 5 and other JRPGs.  
-           I also enjoy Souls-like games.  
-           Additionally, I am interested in game development, although I haven't created any games yet.  
-           I also enjoy cosplay the characters that I like — here are some of my photos:
-        </p>
-
-        <!-- Cosplay Gallery -->
+    <div class="container">
+        <!-- 左边图片 -->
         <div class="gallery">
-            <a href="#img1"><img src="林克.jpg" alt="Cosplay 1"></a>
-            <a href="#img2"><img src="joker怪盗.jpg" alt="Cosplay 2"></a>
-            <a href="#img3"><img src="joker校园.jpg" alt="Cosplay 3"></a>
+            <img src="林克.jpg" alt="Cosplay Link">
+            <img src="joker怪盗.jpg" alt="Cosplay Joker Phantom Thief">
+            <img src="joker校园.jpg" alt="Cosplay Joker Student">
         </div>
 
-        <!-- Lightbox 预览 -->
-        <div id="img1" class="lightbox">
-            <a href="#" class="close">&times;</a>
-            <img src="林克.jpg" alt="Cosplay 1">
+        <!-- 右边文字 -->
+        <div class="content-box">
+            <h1>Hobbies</h1>
+            <p>
+                As you can see, I love Persona 5 and other JRPGs.  
+                I also enjoy Souls-like games.  
+                Additionally, I am interested in game development, although I haven't created any games yet.  
+                I also enjoy cosplay the characters that I like — here are some of my photos.
+            </p>
+            <a class="back" href="../index.html">Back to Main Page</a>
         </div>
-        <div id="img2" class="lightbox">
-            <a href="#" class="close">&times;</a>
-            <img src="joker怪盗.jpg" alt="Cosplay 2">
-        </div>
-        <div id="img3" class="lightbox">
-            <a href="#" class="close">&times;</a>
-            <img src="joker校园.jpg" alt="Cosplay 3">
-        </div>
-
-        <a class="back" href="../index.html">Back to Main Page</a>
     </div>
 </body>
 </html>
