--- a/personal_profile/hobbies.html
+++ b/personal_profile/hobbies.html
@@ -18,7 +18,7 @@
             display: flex;
             justify-content: center;
             align-items: flex-start;
-            gap: 60px; /* 左右间距 */
+            gap: 80px; /* 左右间距 */
         }
 
         /* 左边文字介绍框 */
@@ -28,7 +28,7 @@
             border-radius: 15px;
             border: 3px solid white;
             box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-            max-width: 600px;
+            max-width: 500px;
         }
 
         h1 {
@@ -69,11 +69,11 @@
         .gallery {
             display: flex;
             flex-direction: column;
-            gap: 25px;
+            gap: 30px;
         }
 
         .gallery img {
-            width: 280px;  /* 控制宽度 */
+            width: 350px;  /* 调大尺寸 */
             height: auto;
             border-radius: 12px;
             border: 3px solid white;
