--- a/personal_profile/contact.html
+++ b/personal_profile/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="../styles.css">
+
+    <!-- 引入 Font Awesome 图标库 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <style>
         body {
             background: url('p5_开枪.jpg') no-repeat center center fixed;
@@ -40,15 +44,19 @@
         }
 
         a.social-link {
-            color: #00acee; /* Instagram 蓝色 */
+            color: #E1306C; /* Instagram 官方粉色 */
             font-weight: bold;
             text-decoration: none;
             transition: 0.3s ease-in-out;
         }
 
         a.social-link:hover {
-            color: #ff4081; /* 粉色高亮 */
+            color: #ff85b3;
             text-decoration: underline;
+        }
+
+        .social-link i {
+            margin-right: 8px;
         }
 
         .back {
@@ -84,9 +92,10 @@
             <strong>1108956620</strong>
         </p>
 
-        <p>Follow me on Instagram:  
+        <p>
+            Follow me on Instagram:  
             <a class="social-link" href="https://www.instagram.com/darrenli2333?igsh=d3JyYTR5NjRydzA%3D&utm_source=qr" target="_blank">
-                @darrenli233
+                <i class="fab fa-instagram"></i> @darrenli233
             </a>
         </p>
 
