--- a/personal_profile/contact.html
+++ b/personal_profile/contact.html
@@ -44,7 +44,7 @@
         }
 
         a.social-link {
-            color: #E1306C; /* Instagram 官方粉色 */
+            color: #E1306C; /* Instagram 粉色 */
             font-weight: bold;
             text-decoration: none;
             transition: 0.3s ease-in-out;
@@ -84,16 +84,15 @@
     <div class="content-box">
         <h1>Contact</h1>
 
-        <p>You can reach me via email at:  
+        <p><i class="fas fa-envelope"></i> Email:  
             <strong>darrenli03913@gmail.com</strong>
         </p>
 
-        <p>If you want to play games together, here is my Steam code:  
+        <p><i class="fab fa-steam"></i> Steam Code:  
             <strong>1108956620</strong>
         </p>
 
         <p>
-            Follow me on Instagram:  
             <a class="social-link" href="https://www.instagram.com/darrenli2333?igsh=d3JyYTR5NjRydzA%3D&utm_source=qr" target="_blank">
                 <i class="fab fa-instagram"></i> @darrenli233
             </a>
