--- a/personal_profile/about_me.html
+++ b/personal_profile/about_me.html
@@ -64,15 +64,16 @@
     <div class="content-box">
         <h1>About Me</h1>
         <p>
-  Hi! My name is Haoxuan Li, but you can call me Darren.  
-  I am a 21-year-old Computer Science student in my third year of study (part-time), and I am expected to graduate next year in Term 3.  
+  Hi! My name is Haoxuan Li, but you can call me Darren.
+I’m a 21-year-old Computer Science student currently in my third year of part-time study, and I’m on track to graduate next year in Term 3.
 
-  I was born in China and moved to Australia at the age of 13.  
-  While I’m just starting to build my first project, I am eager to learn, collaborate, and create meaningful solutions through coding and innovation.  
+I was born in China and moved to Australia when I was 13.
+Although I’m just beginning to build my first project, I’m eager to learn, collaborate, and make new friends through this opportunity.
 </p>
         <a class="back" href="../index.html">Back to Main Page</a> <!-- Corrected link -->
     </div>
 </body>
 </html>
+
 
 
